# mcp-conf-mcp-server

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/mcp_conf_mcp_server/: __init__.py  __main__.py  server.py
tests/: __init__.py  test_edge_cases.py  test_server.py
