[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-conf-mcp-server"
version = "0.1.0"
description = "MCP server for editing ~/.aws/amazonq/mcp.json configuration"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
mcp-conf-mcp-server = "mcp_conf_mcp_server.__main__:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true